Restructure repository to separate examples by subdirs

--- a/Chat/index.html
+++ b/Chat/index.html
@@ -12,7 +12,7 @@
 <script type='text/javascript'>
 
   // Get a reference to the root of the chat data.
-  var messagesRef = new Firebase('https://chat-example.firebaseio-demo.com/');
+  var messagesRef = new Firebase('https://example.firebaseio-demo.com/chat');
 
   // When the user presses enter on the message input, write the message to firebase.
   $('#messageInput').keypress(function (e) {
