--- a/Drawing/index.html
+++ b/Drawing/index.html
@@ -17,7 +17,7 @@
     var pixSize = 8, lastPoint = null, currentColor = "000", mouseDown = 0;
 
     //Create a reference to the pixel data for our drawing.
-    var pixelDataRef = new Firebase('https://drawing-example.firebaseio-demo.com/');
+    var pixelDataRef = new Firebase('https://example.firebaseio-demo.com/drawing');
 
     // Set up our canvas
     var myCanvas = document.getElementById('drawing-canvas');
