--- a/Leaderboard/index.html
+++ b/Leaderboard/index.html
@@ -18,7 +18,7 @@
   var LEADERBOARD_SIZE = 5;
 
   // Build some firebase references.
-  var rootRef = new Firebase('https://leaderboard-example.firebaseio-demo.com/');
+  var rootRef = new Firebase('https://example.firebaseio-demo.com/leaderboard');
   var scoreListRef = rootRef.child("scoreList");
   var highestScoreRef = rootRef.child("highestScore");
 
