--- a/Presence/index.html
+++ b/Presence/index.html
@@ -17,13 +17,13 @@
       currentStatus = "★ online";
 
   // Get a reference to the presence data in Firebase.
-  var userListRef = new Firebase('https://presence-example.firebaseio-demo.com/');
+  var userListRef = new Firebase('https://example.firebaseio-demo.com/presence');
 
   // Generate a reference to a new location for my user with push.
   var myUserRef = userListRef.push();
 
   // Get a reference to my own presence status.
-  var connectedRef = new Firebase("http://presence.firebaseio-demo.com/.info/connected");
+  var connectedRef = new Firebase("http://example.firebaseio-demo.com/.info/connected");
   connectedRef.on("value", function(isOnline) {
     if (isOnline.val()) {
       // If we lose our internet connection, we want ourselves removed from the list.
