--- a/Tetris/index.html
+++ b/Tetris/index.html
@@ -23,7 +23,7 @@
     alert("You must use a browser that supports HTML5 Canvas to run this demo.");
 
   function start() {
-    var tetrisRef = new Firebase('https://tetris-example.firebaseio-demo.com/');
+    var tetrisRef = new Firebase('https://example.firebaseio-demo.com/tetris');
     var tetrisController = new Tetris.Controller(tetrisRef);
   }
 
