updated css for all examples

--- a/Presence/index.html
+++ b/Presence/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="https://cdn.firebase.com/v0/firebase.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://www.firebase.com/js/libs/idle.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://www.firebase.com/css/example.css">
+  <link rel="stylesheet" type="text/css" href="example.css">
 </head>
 <body>
 <div id="presenceDiv"></div>
