--- a/Tetris/index.html
+++ b/Tetris/index.html
@@ -3,7 +3,7 @@
   <title>Tetris</title>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.firebase.com/v0/firebase.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://www.firebase.com/css/example.css">
+  <link rel="stylesheet" type="text/css" href="example.css">
 </head>
 
 <body class="tetris-body">
