--- a/Chat/index.html
+++ b/Chat/index.html
@@ -1,35 +1,26 @@
 <html>
-<head>
-  <title>Firebase Chat Example</title>
-  <script type="text/javascript" src="https://cdn.firebase.com/v0/firebase.js"></script>
-  <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
-  <link rel="stylesheet" type="text/css" href="example.css">
-</head>
-<body>
-<div id='messagesDiv'></div>
-<input type='text' id='nameInput' placeholder='Name'>
-<input type='text' id='messageInput' placeholder='Message...'>
-<script type='text/javascript'>
+  <head>
+    <title>Firebase Basic Chat Example</title>
 
-  // Get a reference to the root of the chat data.
-  var messagesRef = new Firebase('https://example.firebaseio-demo.com/chat');
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.0.2/firebase.js"></script>
 
-  // When the user presses enter on the message input, write the message to firebase.
-  $('#messageInput').keypress(function (e) {
-    if (e.keyCode == 13) {
-      var name = $('#nameInput').val();
-      var text = $('#messageInput').val();
-      messagesRef.push({name:name, text:text});
-      $('#messageInput').val('');
-    }
-  });
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-  // Add a callback that is triggered for each chat message.
-  messagesRef.on('child_added', function (snapshot) {
-    var message = snapshot.val();
-    $('<div/>').text(message.text).prepend($('<em/>').text(message.name+': ')).appendTo($('#messagesDiv'));
-    $('#messagesDiv')[0].scrollTop = $('#messagesDiv')[0].scrollHeight;
-  });
-</script>
-</body>
+    <!-- Custom JS -->
+    <script src="js/chat.js"></script>
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/chat.css">
+  </head>
+
+  <body>
+    <h1>Firebase Realtime Chat</h1>
+
+    <div id="messagesDiv"></div>
+
+    <input type="text" id="nameInput" placeholder="Name" />
+    <input type="text" id="messageInput" placeholder="Message..." />
+  </body>
 </html>
