--- a/Presence/index.html
+++ b/Presence/index.html
@@ -1,83 +1,26 @@
 <html>
-<head>
-  <title>Presence Example</title>
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <meta charset="utf-8">
-  <script type="text/javascript" src="https://cdn.firebase.com/v0/firebase.js"></script>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://www.firebase.com/js/libs/idle.js"></script>
-  <link rel="stylesheet" type="text/css" href="example.css">
-</head>
-<body>
-<div id="presenceDiv"></div>
-<script type="text/javascript">
+  <head>
+    <title>Firebase Presence Example</title>
 
-  // Prompt the user for a name to use.
-  var name = prompt("Your name?", "Guest"),
-      currentStatus = "★ online";
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.0.2/firebase.js"></script>
 
-  // Get a reference to the presence data in Firebase.
-  var userListRef = new Firebase('https://example.firebaseio-demo.com/presence');
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-  // Generate a reference to a new location for my user with push.
-  var myUserRef = userListRef.push();
+    <!-- Idle.js -->
+    <script src="js/idle.js"></script>
 
-  // Get a reference to my own presence status.
-  var connectedRef = new Firebase("http://example.firebaseio-demo.com/.info/connected");
-  connectedRef.on("value", function(isOnline) {
-    if (isOnline.val()) {
-      // If we lose our internet connection, we want ourselves removed from the list.
-      myUserRef.onDisconnect().remove();
+    <!-- Custom JS -->
+    <script src="js/presence.js"></script>
 
-      // Set our initial online status.
-      setUserStatus("★ online");
-    } else {
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/presence.css">
+  </head>
 
-      // We need to catch anytime we are marked as offline and then set the correct status. We
-      // could be marked as offline 1) on page load or 2) when we lose our internet connection
-      // temporarily.
-      setUserStatus(currentStatus);
-    }
-  });
+  <body>
+    <h1>Firebase Realtime Presence</h1>
 
-  // A helper function to let us set our own state.
-  function setUserStatus(status) {
-    // Set our status in the list of online users.
-    currentStatus = status;
-    myUserRef.set({ name: name, status: status });
-  }
-
-  // Update our GUI to show someone"s online status.
-  userListRef.on("child_added", function(snapshot) {
-    var user = snapshot.val();
-    $("#presenceDiv").append($("<div/>").attr("id", snapshot.name()));
-    $("#" + snapshot.name()).text(user.name + " is currently " + user.status);
-  });
-
-  // Update our GUI to remove the status of a user who has left.
-  userListRef.on("child_removed", function(snapshot) {
-    $("#" + snapshot.name()).remove();
-  });
-
-  // Update our GUI to change a user"s status.
-  userListRef.on("child_changed", function(snapshot) {
-    var user = snapshot.val();
-    $("#" + snapshot.name()).text(user.name + " is currently " + user.status);
-  });
-
-  // Use idle/away/back events created by idle.js to update our status information.
-  document.onIdle = function () {
-    setUserStatus("☆ idle");
-  }
-  document.onAway = function () {
-    setUserStatus("☄ away");
-  }
-  document.onBack = function (isIdle, isAway) {
-    setUserStatus("★ online");
-  }
-
-  setIdleTimeout(5000);
-  setAwayTimeout(10000);
-</script>
-</body>
+    <div id="presenceDiv"></div>
+  </body>
 </html>
