Fixed issues with security rules.

--- a/Leaderboard/index.html
+++ b/Leaderboard/index.html
@@ -29,7 +29,7 @@
     <input type="text" id="scoreInput" placeholder="Score">
 
     <div id="highestScore">
-      Highest Score so Far: <span id="highestScoreDiv"></span>
+      Highest score so far: <span id="highestScoreDiv"></span>
     </div>
   </body>
 </html>
